@@ -19,10 +19,11 @@
  *                                                                        *
  **************************************************************************/
 
+#include "config.h"
+
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
-#include "config.h"
 #include "proto.h"
 #include "nano.h"
 
