@@ -19,6 +19,8 @@
  *                                                                        *
  **************************************************************************/
 
+#include "config.h"
+
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
@@ -31,7 +33,6 @@
 #include <dirent.h>
 #include <pwd.h>
 
-#include "config.h"
 #include "proto.h"
 #include "nano.h"
 
